--- a/root.tex
+++ b/root.tex
@@ -28,6 +28,7 @@
 \usepackage{float}
 \usepackage{threeparttable}
 \usepackage{subfigure}
+\usepackage{url}
 
 % The following packages can be found on http:\\www.ctan.org
 %\usepackage{graphics} % for pdf, bitmapped graphics files
