--- a/src/fpgaslam.bib
+++ b/src/fpgaslam.bib
@@ -1,3 +1,9 @@
+@article{Tech:2019360, 
+  title = {{Boards - Deephi Tech}}, 
+  url = {http://www.deephi.com/technology/boards}, 
+  read = {false}, 
+  year = {2019}
+}
 @article{Zhan:2018e92, 
   title = {{Unsupervised learning of monocular depth estimation and visual odometry with deep feature reconstruction}}, 
   author = {Zhan, Huangying and Garg, Ravi and Weerasekera, Chamara Saroj and Li, Kejie and Agarwal, Harsh and Reid, Ian}, 
@@ -26,6 +32,13 @@
   journal = {arXiv preprint arXiv:1809.01019}, 
   abstract = {Many robotics applications require precise pose estimates despite operating in large and changing environments. This can be addressed by visual localization, using a pre-computed 3D model of the surroundings. The pose estimation then amounts to finding correspondences between 2D keypoints in a query image and 3D points in the model using local descriptors. However, computational power is often limited on robotic platforms, making this task challenging in large-scale environments. Binary feature descriptors significantly speed up this 2D-3D matching, and have become popular in the robotics community, but also strongly impair the robustness to perceptual aliasing and changes in viewpoint, illumination and scene structure. In this work, we propose to leverage recent advances in deep learning to perform an efficient hierarchical localization. We first localize at the map level using learned image-wide global descriptors, and subsequently estimate a precise pose from 2D-3D matches computed in the candidate places only. This restricts the local search and thus allows to efficiently exploit powerful non-binary descriptors usually dismissed on resource-constrained devices. Our approach results in state-of-the-art localization performance while running in real-time on a popular mobile platform, enabling new prospects for robotics research.}, 
   arxiv = {1809.01019}, 
+  year = {2018}
+}
+@article{Yu:2018c69, 
+  title = {{Instruction Driven Cross-layer CNN Accelerator for Fast Detection on FPGA}}, 
+  author = {Yu, Jincheng and Ge, Guangjun and Hu, Yiming and Ning, Xuefei and Qiu, Jiantao and Guo, Kaiyuan and Wang, Yu and Yang, Huazhong}, 
+  journal = {ACM Transactions on Reconfigurable Technology and Systems (TRETS)}, 
+  volume = {11}, 
   year = {2018}
 }
 @article{Brahmbhatt:2018c15, 
@@ -66,6 +79,12 @@
   issn = {0162-8828}, 
   eissn = {1939-3539}, 
   doi = {10.1109/tpami.2017.2711011}, 
+  year = {2017}
+}
+@article{Noh:2017d0b, 
+  title = {{Large-scale image retrieval with attentive deep local features}}, 
+  author = {Noh, Hyeonwoo and Araujo, Andre and Sim, Jack and Weyand, Tobias and Han, Bohyung}, 
+  journal = {Proceedings of the IEEE International Conference on Computer Vision}, 
   year = {2017}
 }
 @article{Kasyanov:2017f17, 
@@ -116,6 +135,19 @@
   doi = {10.1109/cw.2017.47}, 
   year = {2017}
 }
+@article{Mur-Artal:2017281, 
+  title = {{ORB-SLAM2: An Open-Source SLAM System for Monocular, Stereo, and RGB-D Cameras}}, 
+  author = {Mur-Artal, Ral and Tards, Juan D.}, 
+  journal = {IEEE Transactions on Robotics}, 
+  abstract = {We present ORB-SLAM2, a complete simultaneous localization and mapping (SLAM) system for monocular, stereo and RGB-D cameras, including map reuse, loop closing, and relocalization capabilities. The system works in real time on standard central processing units in a wide variety of environments from small hand-held indoors sequences, to drones flying in industrial environments and cars driving around a city. Our back-end, based on bundle adjustment with monocular and stereo observations, allows for accurate trajectory estimation with metric scale. Our system includes a lightweight localization mode that leverages visual odometry tracks for unmapped regions and matches with map points that allow for zero-drift localization. The evaluation on 29 popular public sequences shows that our method achieves state-of-the-art accuracy, being in most cases the most accurate SLAM solution. We publish the source code, not only for the benefit of the SLAM community, but with the aim of being an out-of-the-box SLAM solution for researchers in other fields.}, 
+  volume = {33}, 
+  pages = {1255--1262}, 
+  issn = {1552-3098}, 
+  eissn = {1941-0468}, 
+  doi = {10.1109/tro.2017.2705103}, 
+  arxiv = {1610.06475}, 
+  year = {2016}
+}
 @article{Kendall:20150d9, 
   title = {{PoseNet: A Convolutional Network for Real-Time 6-DOF Camera Relocalization}}, 
   author = {Kendall, Alex and Grimes, Matthew and Cipolla, Roberto}, 
@@ -124,4 +156,50 @@
   pages = {2938--2946}, 
   doi = {10.1109/iccv.2015.336}, 
   year = {2015}
+}
+@article{Simonyan:20143be, 
+  title = {{Very Deep Convolutional Networks for Large-Scale Image Recognition}}, 
+  author = {Simonyan, Karen and Zisserman, Andrew}, 
+  journal = {arXiv preprint arXiv:1409.1556}, 
+  abstract = {In this work we investigate the effect of the convolutional network depth on its accuracy in the large-scale image recognition setting. Our main contribution is a thorough evaluation of networks of increasing depth using an architecture with very small (3x3) convolution filters, which shows that a significant improvement on the prior-art configurations can be achieved by pushing the depth to 16-19 weight layers. These findings were the basis of our ImageNet Challenge 2014 submission, where our team secured the first and the second places in the localisation and classification tracks respectively. We also show that our representations generalise well to other datasets, where they achieve state-of-the-art results. We have made our two best-performing ConvNet models publicly available to facilitate further research on the use of deep visual representations in computer vision.}, 
+  arxiv = {1409.1556}, 
+  year = {2014}
+}
+@article{Galvez-Lopez:2012c94, 
+  title = {{Bags of binary words for fast place recognition in image sequences}}, 
+  author = {Gálvez-López, Dorian and Tardos, Juan D}, 
+  journal = {IEEE Transactions on Robotics}, 
+  volume = {28}, 
+  year = {2012}
+}
+@article{Jegou:2010f45, 
+  title = {{Aggregating local descriptors into a compact image representation}}, 
+  author = {Jégou, Hervé and Douze, Matthijs and Schmid, Cordelia and Pérez, Patrick}, 
+  journal = {CVPR 2010-23rd IEEE Conference on Computer Vision \& Pattern Recognition}, 
+  year = {2010}
+}
+@article{Lowe:2004e6e, 
+  title = {{Distinctive Image Features from Scale-Invariant Keypoints}}, 
+  author = {Lowe, David G.}, 
+  journal = {International Journal of Computer Vision}, 
+  abstract = {This paper presents a method for extracting distinctive invariant features from images that can be used to perform reliable matching between different views of an object or scene. The features are invariant to image scale and rotation, and are shown to provide robust matching across a substantial range of affine distortion, change in 3D viewpoint, addition of noise, and change in illumination. The features are highly distinctive, in the sense that a single feature can be correctly matched with high probability against a large database of features from many images. This paper also describes an approach to using these features for object recognition. The recognition proceeds by matching individual features to a database of features from known objects using a fast nearest-neighbor algorithm, followed by a Hough transform to identify clusters belonging to a single object, and finally performing verification through least-squares solution for consistent pose parameters. This approach to recognition can robustly identify objects among clutter and occlusion while achieving near real-time performance.}, 
+  volume = {60}, 
+  pages = {91--110}, 
+  issn = {0920-5691}, 
+  eissn = {1573-1405}, 
+  doi = {10.1023/b:visi.0000029664.99615.94}, 
+  year = {2004}
+}
+@book{bertsekas1989, 
+  title = {{Parallel and distributed computation: numerical methods}}, 
+  author = {Bertsekas, Dimitri P and Tsitsiklis, John N}, 
+  read = {false}, 
+  year = {1989}
+}
+@inproceedings{kendall2017end,
+  title={End-to-end learning of geometry and context for deep stereo regression},
+  author={Kendall, Alex and Martirosyan, Hayk and Dasgupta, Saumitro and Henry, Peter and Kennedy, Ryan and Bachrach, Abraham and Bry, Adam},
+  booktitle={Proceedings of the IEEE International Conference on Computer Vision},
+  pages={66--75},
+  year={2017}
 }
