--- a/src/introduction.tex
+++ b/src/introduction.tex
@@ -7,17 +7,17 @@ However, in many scenarios, communication is limited, so that there is no server
 
 Therefore, to reduce communication requirements, the previous work \cite{Cieslewski:20187ee} proposes a data-efficient decentralized SLAM(DSLAM) system. 
 The DSLAM frame in \cite{Cieslewski:20187ee} is illustrated in \cref{fig:all_pre}.
-It makes improvements in three typical components in the DSLAM system: 1) Using ORB-SLAM \cite{orbslam} in stereo configuration as the visual odometry (VO) algorithm which provides basic intra-robot pose estimation. 2) Using NetVLAD \cite{Arandjelovic:2017997} algorithm to do place recognition which relates the current observation to previous scenes and other robots. 3) Using distributed Gauss-Seidel algorithm \cite{parallel_distributed} as the optimization back-end which optimizes the intra-robot position and fuses the inter-robot locations and maps. Each agent executes the ORB-SLAM which contains three steps for each input frame: feature extraction, feature matching and RANSAC. The NetVLAD method can encode the camera frame to a short vector which can be transformed to the server or a central agent with low communication cost.
+It makes improvements in three typical components in the DSLAM system: 1) Using ORB-SLAM \cite{Mur-Artal:2017281} in stereo configuration as the visual odometry (VO) algorithm which provides basic intra-robot pose estimation. 2) Using NetVLAD \cite{Arandjelovic:2017997} algorithm to do place recognition which relates the current observation to previous scenes and other robots. 3) Using distributed Gauss-Seidel algorithm \cite{bertsekas1989} as the optimization back-end which optimizes the intra-robot position and fuses the inter-robot locations and maps. Each agent executes the ORB-SLAM which contains three steps for each input frame: feature extraction, feature matching and RANSAC. The NetVLAD method can encode the camera frame to a short vector which can be transformed to the server or a central agent with low communication cost.
 
 However, both ORB-SLAM and NetVLAD require tremendous computation and storage resources, and thus, the deployment of DSLAM on embedded system is challaged by the limited resources and power supply.
 
-% Recent advances in the deep learning and the convolution neural network (CNN) enable powerful end-to-end mode for place recognition \cite{Noh:2017d0b,Arandjelovic:2017997}, and the NetVLAD method is one of the most accurate method based on CNN. The NetVLAD algorithm based on VGG-16 model \cite{vgg16} consumes more than 80G operations for a single $300 \times 300$ input image (each operation means a addition or a multiplication). It is very challaging to deploy the NetVLAD on a tranditional embedded hardware platform.
+% 
 % As to ORB-SLAM, the algorithm needs to calculate the feature point and the corresponding descriptors for each frame from camera, which is also difficult for embedded CPUs.
 
 % With the development of FPGA, some previous work accelerate ORM-SLAM or CNN by designing specific hardware architecture. %这里需要增加一段，讲一讲ORB要多么占资源,虽然有些硬件上面的工作，但是不能同时在FPGA上既实现ORB-SLAM又实现CNN加速器。
 
-Though NetVLAD consumes huge computation, with the development of FPGA accelerators, we use the embedded CNN accelerator on FPGA \cite{deephi} to perform NetVLAD for each frame.
-We also notice that there are also some previous works regression the 6-D pose directly from the input setero camera \cite{setero2018} or monocular camera \cite{Li:2018ca8,Zhan:2018e92}, With the development of CNN.
+Though NetVLAD consumes huge computation, with the development of FPGA accelerators, we use the embedded CNN accelerator on FPGA \cite{Tech:2019360} to perform NetVLAD for each frame.
+We also notice that there are also some previous works regression the 6-D pose directly from the input setero camera \cite{kendall2017end} or monocular camera \cite{Li:2018ca8,Zhan:2018e92}, With the development of CNN.
 We adopt Depth-VO-Feat \cite{Zhan:2018e92} in DSLAM system to estimate the pose from the input monocular camera.
 Because Depth-VO-Feat is trained with stereo input frames and inferenced with monocular camera, the CNN method can provide absolute scale from monocular camera, and also be accelerated with our CNN accelerator. Thus we do not need to execute ORB-SLAM on embedded CPUs. 
 
