--- a/src/background.tex
+++ b/src/background.tex
@@ -1,8 +1,10 @@
 \label{sec:background}
 \subsection{CNN based methods in DSLAM}
-As described before, there are two essential components on each agent: 1) Visual Odometr(VO) and 2) Place Recognition.
+As described before, there are two essential components on each agent: 1) Visual Odometry (VO) and 2) Place Recognition.
 
-\subsubsection{Visual Odometr (VO)}
+\subsubsection{Visual Odometry (VO)}
+
+
 
 \subsubsection{Place Recognition}
 
