--- a/root.tex
+++ b/root.tex
@@ -69,7 +69,7 @@ Data-Efficient and Hardware  Decentralized Visual {SLAM}
 \section{Introduction}
 \input{src/introduction.tex}
 
-\section{Background}
+\section{Background and Motivation}
 \input{src/background.tex}
 
 
