--- a/src/fpgaslam.bib
+++ b/src/fpgaslam.bib
@@ -203,3 +203,26 @@
   pages={66--75},
   year={2017}
 }
+# added by Feng Gao
+@article{DBLP:journals/trob/Mur-ArtalMT15,
+  author    = {Raul Mur{-}Artal and
+               J. M. M. Montiel and
+               Juan D. Tard{\'{o}}s},
+  title     = {{ORB-SLAM:} {A} Versatile and Accurate Monocular {SLAM} System},
+  journal   = {IEEE Transactions on Robotics},
+  volume    = {31},
+  number    = {5},
+  pages     = {1147--1163},
+  year      = {2015},
+  url       = {https://doi.org/10.1109/TRO.2015.2463671},
+  doi       = {10.1109/TRO.2015.2463671},
+  timestamp = {Wed, 14 Nov 2018 00:00:00 +0100}
+}
+# added by Feng Gao
+@article{Fang2017FPGAbasedOF,
+  title={FPGA-based ORB feature extraction for real-time visual SLAM},
+  author={Weikang Fang and Yanjun Zhang and Bo Yu and Shaoshan Liu},
+  journal={2017 International Conference on Field Programmable Technology (ICFPT)},
+  year={2017},
+  pages={275-278}
+}
