--- a/src/hardsoft.tex
+++ b/src/hardsoft.tex
@@ -5,4 +5,12 @@ Our hardware-software co-design DSLAM system contains two essential improvements
 We adopt Depth-VO-Feat \cite{Zhan:2018e92} in DSLAM system to estimate the pose from the input monocular camera.
 
 \subsection{Place Recognition}
-As described in \cref{sec:background}, CNN has achieved great improvements in place recognition tasks. 
+As described in \cref{sec:background}, CNN has achieved great improvements in place recognition tasks.
+
+The computation flow of NetVLAD is illustrated in \cref{fig:NetVLAD}.
+
+\begin{figure}[t]
+    \centering  
+    {\includegraphics[width=0.85\linewidth]{fig/NetVLAD.eps}\label{fig:NetVLAD}} 
+    \caption{Process of NetVLAD.}
+\end{figure}
