--- a/src/background.tex
+++ b/src/background.tex
@@ -20,8 +20,9 @@ Deephi CNN accelerator \cite{Tech:2019360} is one of the state-of-the-art accele
 
 \begin{figure}[t]  
     \centering  
-    {\includegraphics[width=0.95\linewidth]{fig/plps.eps}\label{fig:plps}} 
+    \includegraphics[width=0.95\linewidth]{fig/plps.eps}
     \caption{Hardware architecture of Zynq SoC}
+    \label{fig:plps}
 \end{figure}
 
 Though FPGA can greatly improve the performance and energy efficiency of CNN inference, FPGA cannot efficiently calculate float-point number and requires fixed-point parameters and intermediate data in CNN.
