--- a/src/hardsoft.tex
+++ b/src/hardsoft.tex
@@ -11,6 +11,7 @@ The computation flow of NetVLAD is illustrated in \cref{fig:NetVLAD}.
 
 \begin{figure}[t]
     \centering  
-    {\includegraphics[width=0.85\linewidth]{fig/NetVLAD.eps}\label{fig:NetVLAD}} 
+    \includegraphics[width=0.85\linewidth]{fig/NetVLAD.eps}
     \caption{Process of NetVLAD.}
+    \label{fig:NetVLAD}
 \end{figure}
