--- a/src/hardsoft.tex
+++ b/src/hardsoft.tex
@@ -5,9 +5,7 @@ Our hardware-software co-design DSLAM system contains two essential improvements
 We adopt Depth-VO-Feat \cite{Zhan:2018e92} in DSLAM system to estimate the pose from the input monocular camera.
 
 \subsection{Place Recognition}
-As described in \cref{sec:background}, CNN has achieved great improvements in place recognition tasks.
-
-The computation flow of NetVLAD is illustrated in \cref{fig:NetVLAD}.
+The place recognition method provide the encoded vector transformed to the central agent for inter-robot place matching. As described in \cref{sec:background}, CNN has achieved great improvements in place recognition tasks, and NetVLAD \cite{Arandjelovic:2017997} is one of the most impressive methods. The computation flow of NetVLAD is illustrated in \cref{fig:NetVLAD}. The CNN-based place recognition methods give the global descriptor of a camera frame in a two-step manner: 1) Firstly, a CNN encoder fetches the high-level feature map. 2) A vectorization component that aggregates the feature map into a shot global descriptor. The VLAD layer \cite{Arandjelovic:2017997} is a recently proposed plug-and-play operation that greatly improve the performance of place recognition. In the original work with the VLAD layer \cite{Arandjelovic:2017997}, the feature extraction encoder is a typical CNN VGG-16 \cite{Simonyan:20143be}. The output dimonsion of original NetVLAD is usually tens of thousands, which is very difficult to stored on embedded system, not to mention in the communication-constrained environment. The PCA and projection method can drastically reduce the output dimension.
 
 \begin{figure}[t]
     \centering  
