--- a/src/fpgaslam.bib
+++ b/src/fpgaslam.bib
@@ -226,3 +226,10 @@
   year={2017},
   pages={275-278}
 }
+
+@article{Qiu:2016151, 
+  title = {{Going deeper with embedded fpga platform for convolutional neural network}}, 
+  author = {Qiu, Jiantao and Wang, Jie and Yao, Song and Guo, Kaiyuan and Li, Boxun and Zhou, Erjin and Yu, Jincheng and Tang, Tianqi and Xu, Ningyi and Song, Sen}, 
+  journal = {Proceedings of the 2016 ACM/SIGDA International Symposium on Field-Programmable Gate Arrays}, 
+  year = {2016}
+}
