--- a/src/experiment.tex
+++ b/src/experiment.tex
@@ -1,2 +1,4 @@
 \label{sec:experiment}
-The experiment results shows our proposed DSLAM system can perform in real time and achieves similar accuracy with previous work.
+The speed the accuracy of our proposed hardware-software co-design DSLAM will be evaluated in this section.
+
+\section{}
