--- a/src/hardsoft.tex
+++ b/src/hardsoft.tex
@@ -52,3 +52,5 @@ The PS part of NetVLAD should finish before computing the PS part of next NetVLA
     N \times T_{f} > T_{3}
     \label{equ:pipline3}
 \end{equation}
+
+The execution time of our design will be given in \cref{sec:experiment}.
