--- a/src/fpgaslam.bib
+++ b/src/fpgaslam.bib
@@ -226,3 +226,24 @@
   year={2017},
   pages={275-278}
 }
+# added by Feng Gao
+@article{Yu:2018:IDC:3299999.3283452,
+ author = {Yu, Jincheng and Ge, Guangjun and Hu, Yiming and Ning, Xuefei and Qiu, Jiantao and Guo, Kaiyuan and Wang, Yu and Yang, Huazhong},
+ title = {Instruction Driven Cross-layer CNN Accelerator for Fast Detection on FPGA},
+ journal = {ACM Trans. Reconfigurable Technol. Syst.},
+ issue_date = {December 2018},
+ volume = {11},
+ number = {3},
+ month = dec,
+ year = {2018},
+ issn = {1936-7406},
+ pages = {22:1--22:23},
+ articleno = {22},
+ numpages = {23},
+ url = {http://doi.acm.org/10.1145/3283452},
+ doi = {10.1145/3283452},
+ acmid = {3283452},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {CNN, FPGA, image object detection},
+} 
