--- a/root.tex
+++ b/root.tex
@@ -36,6 +36,7 @@
 \usepackage{amsmath} % assumes amsmath package installed
 \usepackage{amssymb}  % assumes amsmath package installed
 
+\usepackage{bigstrut,multirow}
 \usepackage{cleveref}
 \crefname{figure}{fig}{figs}
 
